--- a/src/my-app.html
+++ b/src/my-app.html
@@ -60,7 +60,7 @@
       }
     </style>
 
-    <app-location route="{{route}}"></app-location>
+    <app-location route="{{route}}" use-hash-as-path></app-location>
     <app-route
         route="{{route}}"
         pattern="[[rootPattern]]:page"
@@ -72,11 +72,11 @@
       <app-drawer id="drawer" slot="drawer">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="home" href="home">Home</a>
-          <a name="projects" href="projects">Projects</a>
-          <a name="publications" href="publications">Publications</a>
-          <a name="teaching" href="teaching">Teaching</a>
-          <a name="personal" href="personal">Personal</a>
+          <a name="home" href="#/home">Home</a>
+          <a name="projects" href="#/projects">Projects</a>
+          <a name="publications" href="#/publications">Publications</a>
+          <a name="teaching" href="#/teaching">Teaching</a>
+          <a name="personal" href="#/personal">Personal</a>
         </iron-selector>
       </app-drawer>
 
@@ -86,7 +86,7 @@
         <app-header slot="header" condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <div main-title>My App</div>
+            <div main-title>Justin Huang</div>
           </app-toolbar>
         </app-header>
 
@@ -142,7 +142,7 @@
         // Polymer 2.0 will call with `undefined` on initialization.
         // Ignore until we are properly called with a string.
         if (page === undefined) {
-          return;
+          this.page = 'home';
         }
 
         // If no page was found in the route data, page will be an empty string.
