--- a/src/my-app.html
+++ b/src/my-app.html
@@ -29,10 +29,6 @@
         display: block;
       }
 
-      app-drawer-layout:not([narrow]) [drawer-toggle] {
-        display: none;
-      }
-
       app-header {
         color: #fff;
         background-color: var(--app-primary-color);
@@ -40,6 +36,17 @@
 
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
+      }
+
+      app-drawer-layout, app-drawer {
+        margin-top: 64px;
+        --app-drawer-width: 200px;
+      }
+
+      app-drawer {
+        --app-drawer-content-container: {
+          background-color: #eee;
+        }
       }
 
       .drawer-list {
@@ -67,29 +74,27 @@
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
 
-    <app-drawer-layout fullbleed>
-      <!-- Drawer content -->
-      <app-drawer id="drawer" slot="drawer">
-        <app-toolbar>Menu</app-toolbar>
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="home" href="#/home">Home</a>
-          <a name="projects" href="#/projects">Projects</a>
-          <a name="publications" href="#/publications">Publications</a>
-          <a name="teaching" href="#/teaching">Teaching</a>
-          <a name="personal" href="#/personal">Personal</a>
-        </iron-selector>
-      </app-drawer>
+    <app-header-layout>
+      <app-header slot="header">
+        <app-toolbar>
+          <paper-icon-button icon="my-icons:menu" on-tap="_toggleDrawer"></paper-icon-button>
+          <div main-title>Justin Huang</div>
+        </app-toolbar>
+      </app-header>
 
-      <!-- Main content -->
-      <app-header-layout has-scrolling-region>
+      <app-drawer-layout fullbleed id="drawerLayout">
+        <!-- Drawer content -->
+        <app-drawer id="drawer" slot="drawer">
+          <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
+            <a name="home" href="#/home">Home</a>
+            <a name="projects" href="#/projects">Projects</a>
+            <a name="publications" href="#/publications">Publications</a>
+            <a name="teaching" href="#/teaching">Teaching</a>
+            <a name="personal" href="#/personal">Personal</a>
+          </iron-selector>
+        </app-drawer>
 
-        <app-header slot="header" condenses reveals effects="waterfall">
-          <app-toolbar>
-            <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <div main-title>Justin Huang</div>
-          </app-toolbar>
-        </app-header>
-
+        <!-- Main content -->
         <iron-pages
             selected="[[page]]"
             attr-for-selected="name"
@@ -102,8 +107,8 @@
           <my-personal name="personal"></my-personal>
           <my-view404 name="view404"></my-view404>
         </iron-pages>
-      </app-header-layout>
-    </app-drawer-layout>
+      </app-drawer-layout>
+    </app-header-layout>
   </template>
 
   <script>
@@ -139,20 +144,7 @@
       }
 
       _routePageChanged(page) {
-        // Polymer 2.0 will call with `undefined` on initialization.
-        // Ignore until we are properly called with a string.
-        if (page === undefined) {
-          this.page = 'home';
-        }
-
-        // If no page was found in the route data, page will be an empty string.
-        // Default to 'home' in that case.
         this.page = page || 'home';
-
-        // Close a non-persistent drawer when the page & route are changed.
-        if (!this.$.drawer.persistent) {
-          this.$.drawer.close();
-        }
       }
 
       _pageChanged(page) {
@@ -167,6 +159,11 @@
 
       _showPage404() {
         this.page = 'view404';
+      }
+
+      _toggleDrawer() {
+        this.$.drawer.toggle();
+        this.$.drawerLayout.forceNarrow = !this.$.drawerLayout.forceNarrow;
       }
     }
 
