--- a/src/my-app.html
+++ b/src/my-app.html
@@ -23,7 +23,7 @@
   <template>
     <style>
       :host {
-        --app-primary-color: #4285f4;
+        --app-primary-color: #558b2e;
         --app-secondary-color: black;
 
         display: block;
@@ -62,7 +62,8 @@
       }
 
       .drawer-list a.iron-selected {
-        color: black;
+        background-color: #C5E1A5;
+        color: #33691e;
         font-weight: bold;
       }
     </style>
