--- a/src/my-app.html
+++ b/src/my-app.html
@@ -38,6 +38,10 @@
         --paper-icon-button-ink-color: white;
       }
 
+      div[main-title] {
+        text-align: center;
+      }
+
       app-drawer-layout, app-drawer {
         margin-top: 64px;
         --app-drawer-width: 200px;
