--- a/src/my-app.html
+++ b/src/my-app.html
@@ -66,7 +66,7 @@
       }
 
       .drawer-list a.iron-selected {
-        background-color: #C5E1A5;
+        background-color: #c5e1a5;
         color: #33691e;
         font-weight: bold;
       }
