--- a/src/my-home.html
+++ b/src/my-home.html
@@ -1,20 +1,77 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-home">
   <template>
+    <style include="iron-flex iron-flex-alignment"></style>
     <style include="shared-styles">
       :host {
         display: block;
         padding: 10px;
       }
+      .portrait {
+        height: 200px;
+        width: 200px;
+        border-radius: 3px;
+        float: left;
+        margin-bottom: 14px;
+        margin-right: 14px;
+      }
+      h1 {
+        margin: 0;
+      }
+      .title {
+        overflow: auto;
+      }
+      .links iron-icon {
+        color: #212121;
+        height: 24px;
+        width: 24px;
+        margin-right: 8px;
+      }
+      .links img {
+        height: 24px;
+        width: 24px;
+        margin-right: 8px;
+      }
+      .links a {
+        font-size: 18px;
+      }
+      .link {
+        margin-top: 10px;
+      }
     </style>
 
     <div class="card">
-      <div class="circle">0</div>
-      <h1>View Zero</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.</p>
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
+      <div class="title">
+        <img src="../images/justin.jpg" class="portrait" alt="Profile picture" />
+        <p>Ph.D.&nbsp;Candidate</p>
+        <p>Paul&nbsp;G.&nbsp;Allen School of Computer Science &amp; Engineering</p>
+        <p>University&nbsp;of&nbsp;Washington</p>
+      </div>
+      <h1>About me</h1>
+      <p>
+        I work on human-robot interaction with my advisor, <a href="http://www.mayacakmak.com/">Maya Cakmak</a>.
+        My research focuses on making robots practical and easy to program.
+        Specifically, I'm interested in allowing people to program mobile manipulators without having to be experts, while also allowing experts to build robot programs rapidly.
+        Simultaneously, I also want to use computer vision and AI to make robots more capable.
+      </p>
+      <h1>Links</h1>
+      <div class="links">
+        <a href="https://github.com/jstnhuang" target="_blank" class="link layout horizontal center">
+          <img src="../images/github.png" />My Github
+        </a>
+        <a href="https://github.com/hcrlab" target="_blank" class="link layout horizontal center">
+          <img src="../images/github.png" />HCR Lab Github
+        </a>
+        <a href="https://drive.google.com/open?id=0B77PnOCaAq8sZjI1S20tZkZfdFk" target="_blank" class="link layout horizontal center">
+          <iron-icon icon="editor:insert-drive-file"></iron-icon>Curriculum Vitae
+        </a>
+      </div>
     </div>
   </template>
 
