--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -5,10 +5,10 @@
   <template>
     <style>
       .card {
-        margin: 24px;
+        margin: 14px;
         padding: 16px;
         color: #757575;
-        border-radius: 5px;
+        border-radius: 2px;
         background-color: #fff;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
@@ -27,8 +27,25 @@
 
       h1 {
         margin: 16px 0;
+        margin-top: 0;
         color: #212121;
         font-size: 22px;
+      }
+
+      p {
+        margin-top: 0;
+      }
+
+      a {
+        color: #689f38;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+
+      .primaryText {
+        color: #212121;
       }
     </style>
   </template>
