--- a/src/my-publications.html
+++ b/src/my-publications.html
@@ -9,16 +9,74 @@
 
         padding: 10px;
       }
+      .title {
+        font-weight: bold;
+      }
+      .authors {
+      }
+      .publisher {
+        color: #212121;
+      }
     </style>
 
     <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
+      <h1>Publications</h1>
+      <p>
+        <strong class="title primaryText">Flexible User Specification of Perceptual Landmarks for Robot Manipulation</strong><br />
+        <span class="publisher">Intelligent Robots and Systems (IROS). IEEE, 2017</span><br />
+        <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
+      </p>
+      <p>
+        <strong class="title primaryText">Evaluating Older Adults Interaction with a Mobile Assistive Robot</strong><br />
+        <span class="publisher">Intelligent Robots and Systems (IROS). IEEE, 2017</span><br />
+        <span class="authors">Caio Cesar Rodrigues Mucchiani, Suneet Sharma, Megan Johnson, Justine Sefcik, Nicholas Vivio, <strong>Justin Huang</strong>, Pamela Cacchione, Michelle J. Johnson, Roshan Rai, Adrian Canoso, Tessa Lau, and Mark Yim</span><br />
+      </p>
+      <p>
+        <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sYnAzajVtZFZPRjg">Code3: A System for End-to-End Programming of Mobile Manipulator Robots for Novices and Experts</a></strong><br />
+        <span class="publisher">Proceedings of the Twelfth Annual ACM/IEEE International Conference on Human-Robot Interaction. ACM, 2017</span><br />
+        <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
+      </p>
+      <p>
+        <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sM2lLWEpRUUZlZlE">Computer Science Outreach with End-User Programming Tools</a><br />
+        <span class="publisher">Proceedings of the 48th ACM Technical Symposium on Computing Science Education. ACM, 2017</span><br />
+        <span class="authors">Paramasivam, Vivek, <strong>Justin Huang</strong>, Sarah Elliott, and Maya Cakmak</span><br />
+      </p>
+      <p>
+        <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sYlhDenFsTXVBVG8">Iterative Design of a System for Programming Socially Interactive Service Robots</a><br />
+        <span class="publisher">International Conference on Social Robotics. Springer International Publishing, 2016</span><br />
+        <span class="authors">Chung, Michael Jae-Yoon, <strong>Justin Huang</strong>, Leila Takayama, Tessa Lau, and Maya Cakmak</span><br />
+      </p>
+      <p>
+        <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8seFE2UFl6ZHBzZVk/view?usp=sharing">Design and Evaluation of a Rapid Programming System for Service Robots</a><br />
+        <span class="publisher">Proceedings of the Eleventh Annual ACM/IEEE International Conference on Human-Robot Interaction. ACM, 2016</span><br />
+        <span class="authors"><strong>Huang, Justin</strong>, Tessa Lau, and Maya Cakmak</span><br />
+      </p>
+      <p>
+        <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sUkRuQ01RcGd1Mzg/view?usp=sharing">Supporting Mental Model Accuracy in Trigger-Action Programming</a><br />
+        <span class="publisher">Proceedings of the 2015 ACM International Joint Conference on Pervasive and Ubiquitous Computing. ACM, 2015</span><br />
+        <span class="authors"><strong>Huang, Justin</strong>, and Maya Cakmak</span>
+      </p>
+      <p>
+        <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sN0JaTWNfOE9ZVDg/view?usp=sharing">The Privacy-Utility Tradeoff for Remotely Teleoperated Robots</a><br />
+        <span class="publisher">Proceedings of the Tenth Annual ACM/IEEE International Conference on Human-Robot Interaction. ACM, 2015</span><br />
+        <span class="authors">Butler, Daniel J., <strong>Justin Huang</strong>, Franziska Roesner, and Maya Cakmak</span>
+      </p>
+    </div>
+    <div class="card">
+      <h1>Workshop papers and pre-prints</h1>
+      <p>
+        <a class="title" href="https://arxiv.org/abs/1612.00565">Programming by Demonstration with User-Specified Perceptual Landmarks</a><br />
+        <span class="publisher">arXiv preprint arXiv:1612.00565, 2016</span><br />
+        <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
+      </p>
+
+      <p>
+        <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sejBFZXJsMldpOEE/view?usp=sharing">Enabling rapid end-to-end programming of mobile manipulators</a><br />
+        <span class="publisher">Proceedings of the Twelfth Annual ACM/IEEE International Conference on Human-Robot Interaction Extended Abstracts. ACM, 2017.</span><br />
+        <span class="authors"><strong>Huang, Justin</strong></span>
+      </p>
     </div>
   </template>
-
   <script>
     class MyPublications extends Polymer.Element {
       static get is() { return 'my-publications'; }
