Minor update to research statement.

--- a/src/my-home.html
+++ b/src/my-home.html
@@ -57,7 +57,7 @@
       <p>
         I work on human-robot interaction with my advisor, <a href="http://www.mayacakmak.com/">Maya Cakmak</a>.
         My research focuses on making robots practical and easy to program.
-        Specifically, I'm interested in allowing people to program mobile manipulators without having to be experts, while also allowing experts to build robot programs rapidly.
+        Specifically, I'm interested in helping people to program mobile manipulators without having to be experts, while also allowing experts to build robot programs rapidly.
         Simultaneously, I also want to use computer vision and AI to make robots more capable.
       </p>
       <h1>Links</h1>
