Added personal section.

--- a/src/my-personal.html
+++ b/src/my-personal.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="image-thumbnail.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-personal">
@@ -11,11 +12,12 @@
     </style>
 
     <div class="card">
-      <div class="circle">4</div>
-      <h1>View Four</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.</p>
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
+      <h1>Personal</h1>
+      <p>
+        In November 2015, I finished the Seattle Marathon!
+        The next year, I ran the Seattle Half Marathon.
+      </p>
+      <image-thumbnail src="../images/seattle_marathon_2015.jpg" href="images/seattle_marathon_2015.jpg"></image-thumbnail>
   </template>
 
   <script>
