--- a/src/my-publications.html
+++ b/src/my-publications.html
@@ -33,32 +33,32 @@
       </p>
       <p>
         <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sYnAzajVtZFZPRjg">Code3: A System for End-to-End Programming of Mobile Manipulator Robots for Novices and Experts</a></strong><br />
-        <span class="publisher">Proceedings of the Twelfth Annual ACM/IEEE International Conference on Human-Robot Interaction. ACM, 2017</span><br />
+        <span class="publisher">ACM/IEEE International Conference on Human-Robot Interaction (HRI). ACM, 2017</span><br />
         <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
       </p>
       <p>
         <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sM2lLWEpRUUZlZlE">Computer Science Outreach with End-User Programming Tools</a><br />
-        <span class="publisher">Proceedings of the 48th ACM Technical Symposium on Computing Science Education. ACM, 2017</span><br />
+        <span class="publisher">ACM Technical Symposium on Computing Science Education (SIGCSE). ACM, 2017</span><br />
         <span class="authors">Paramasivam, Vivek, <strong>Justin Huang</strong>, Sarah Elliott, and Maya Cakmak</span><br />
       </p>
       <p>
         <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sYlhDenFsTXVBVG8">Iterative Design of a System for Programming Socially Interactive Service Robots</a><br />
-        <span class="publisher">International Conference on Social Robotics. Springer International Publishing, 2016</span><br />
+        <span class="publisher">International Conference on Social Robotics (ICSR). Springer International Publishing, 2016</span><br />
         <span class="authors">Chung, Michael Jae-Yoon, <strong>Justin Huang</strong>, Leila Takayama, Tessa Lau, and Maya Cakmak</span><br />
       </p>
       <p>
         <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8seFE2UFl6ZHBzZVk/view?usp=sharing">Design and Evaluation of a Rapid Programming System for Service Robots</a><br />
-        <span class="publisher">Proceedings of the Eleventh Annual ACM/IEEE International Conference on Human-Robot Interaction. ACM, 2016</span><br />
+        <span class="publisher">ACM/IEEE International Conference on Human-Robot Interaction (HRI). ACM, 2016</span><br />
         <span class="authors"><strong>Huang, Justin</strong>, Tessa Lau, and Maya Cakmak</span><br />
       </p>
       <p>
         <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sUkRuQ01RcGd1Mzg/view?usp=sharing">Supporting Mental Model Accuracy in Trigger-Action Programming</a><br />
-        <span class="publisher">Proceedings of the 2015 ACM International Joint Conference on Pervasive and Ubiquitous Computing. ACM, 2015</span><br />
+        <span class="publisher">ACM International Joint Conference on Pervasive and Ubiquitous Computing (Ubicomp). ACM, 2015</span><br />
         <span class="authors"><strong>Huang, Justin</strong>, and Maya Cakmak</span>
       </p>
       <p>
         <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sN0JaTWNfOE9ZVDg/view?usp=sharing">The Privacy-Utility Tradeoff for Remotely Teleoperated Robots</a><br />
-        <span class="publisher">Proceedings of the Tenth Annual ACM/IEEE International Conference on Human-Robot Interaction. ACM, 2015</span><br />
+        <span class="publisher">ACM/IEEE International Conference on Human-Robot Interaction (HRI). ACM, 2015</span><br />
         <span class="authors">Butler, Daniel J., <strong>Justin Huang</strong>, Franziska Roesner, and Maya Cakmak</span>
       </p>
     </div>
@@ -66,13 +66,13 @@
       <h1>Workshop papers and pre-prints</h1>
       <p>
         <a class="title" href="https://arxiv.org/abs/1612.00565">Programming by Demonstration with User-Specified Perceptual Landmarks</a><br />
-        <span class="publisher">arXiv preprint arXiv:1612.00565, 2016</span><br />
+        <span class="publisher">arXiv preprint. arXiv:1612.00565, 2016</span><br />
         <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
       </p>
 
       <p>
         <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sejBFZXJsMldpOEE/view?usp=sharing">Enabling rapid end-to-end programming of mobile manipulators</a><br />
-        <span class="publisher">Proceedings of the Twelfth Annual ACM/IEEE International Conference on Human-Robot Interaction Extended Abstracts. ACM, 2017.</span><br />
+        <span class="publisher">ACM/IEEE International Conference on Human-Robot Interaction (HRI) Extended Abstracts. ACM, 2017.</span><br />
         <span class="authors"><strong>Huang, Justin</strong></span>
       </p>
     </div>
