--- a/src/my-home.html
+++ b/src/my-home.html
@@ -1,8 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/editor-icons.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-image/iron-image.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-home">
@@ -20,6 +21,7 @@
         float: left;
         margin-bottom: 14px;
         margin-right: 14px;
+        background-color: #fff;
       }
       h1 {
         margin: 0;
@@ -48,7 +50,7 @@
 
     <div class="card">
       <div class="title">
-        <img src="../images/justin.jpg" class="portrait" alt="Profile picture" />
+        <iron-image src="../images/justin.jpg" sizing="cover" class="portrait" preload fade alt="Profile picture"></iron-image>
         <p>Ph.D.&nbsp;Candidate</p>
         <p>Paul&nbsp;G.&nbsp;Allen School of Computer Science &amp; Engineering</p>
         <p>University&nbsp;of&nbsp;Washington</p>
