Added teaching section.

--- a/src/my-teaching.html
+++ b/src/my-teaching.html
@@ -12,10 +12,43 @@
     </style>
 
     <div class="card">
-      <div class="circle">3</div>
-      <h1>View Three</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
+      <h1>Robotics Capstone</h1>
+      <p>
+        In Spring 2017, I was the TA for the robotics capstone class at the University of Washington.
+        In this class, students learned about mobile manipulation and programmed the Fetch robot to perform a variety of tasks.
+        To help with this, I wrote a set of over 30 labs that teach about the Fetch robot's API, navigation, manipulation, and perception.
+        For these, I won the 2017 Bob Bandes Memorial Honorable Mention Teaching Award from the Paul G. Allen School.
+        <ul>
+          <li><a href="https://github.com/cse481sp17/cse481c/wiki">Class labs</a></li>
+          <li><a href="https://sites.google.com/view/cse481sp17/home">Class website</a></li>
+        </ul>
+      </p>
+      <p>
+        I was a TA for the robotics capstone class in Autumn 2014, as well.
+        <ul>
+          <li><a href="https://sites.google.com/site/cse481au14/teams">Final project videos</a></li>
+        </ul>
+      </p>
+    </div>
+
+    <div class="card">
+      <h1>Tutorials and documentation</h1>
+      <p>
+        I'm the creator of a few <a href="https://www.youtube.com/playlist?list=PLJNGprAk4DF5PY0kB866fEZfz6zMLJTF8">YouTube tutorials</a> on ROS.
+        I hope to make more videos in the future.
+      </p>
+      <p>
+        In the HCR Lab, I also worked on a series of presentations related to software development and ROS.
+        <ul>
+          <li>ROS basics <a href="https://docs.google.com/presentation/d/1hS7V-AhcGPWQ4tYdOUyK7rdpmJ7G_RXvRi9No6tC1YM/edit?usp=sharing">(Slides)</a> <a href="https://github.com/hcrlab/randomwalker">(Sample code)</a> <a href="https://www.youtube.com/watch?v=MD255BS0YH4&list=PLJNGprAk4DF5s27K5rqLKe2Z721HLADhl&index=1">(Recording)</a></li>
+          <li>C++ crash course <a href="https://docs.google.com/presentation/d/1CQDdcG0xpyvha5qR_SDElu8_lOC9F2URRX4PQ0hhYJg/edit?usp=sharing">(Slides)</a> <a href="https://www.youtube.com/watch?v=k3yEUAOca9g&list=PLJNGprAk4DF5s27K5rqLKe2Z721HLADhl&index=3">(Recording)</a></li>
+          <li>Git <a href="https://docs.google.com/presentation/d/11z_sScRlFVTSX5wHhAuJy4rJuzPUAVG-oyEAZRCHdmQ/edit?usp=sharing">(Slides)</a> <a href="https://www.youtube.com/watch?v=7YXsj7A9aYI&list=PLJNGprAk4DF5s27K5rqLKe2Z721HLADhl">(Recording)</a> <a href="https://docs.google.com/document/d/1lLyPA6oByAGe0bH3h3wdsV8cfy5LskyuxiVGNSr4wos/edit?usp=sharing">(Document)</a></li>
+        </ul>
+      </p>
+      <p>
+        I've contributed documentation to the <a href="https://github.com/hcrlab/wiki">Human-Centered Robotics Lab wiki</a>.
+        This wiki covers many aspects of ROS, software engineering, and more.
+      </p>
     </div>
   </template>
 
