Fix for non-root paths.

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -80,7 +80,7 @@
     <app-location route="{{route}}" use-hash-as-path></app-location>
     <app-route
         route="{{route}}"
-        pattern="[[rootPattern]]:page"
+        pattern="/:page"
         data="{{routeData}}"
         tail="{{subroute}}"></app-route>
 
