--- a/src/my-personal.html
+++ b/src/my-personal.html
@@ -17,7 +17,7 @@
         In November 2015, I finished the Seattle Marathon!
         The next year, I ran the Seattle Half Marathon.
       </p>
-      <image-thumbnail src="../images/seattle_marathon_2015.jpg" href="images/seattle_marathon_2015.jpg"></image-thumbnail>
+      <image-thumbnail src="images/seattle_marathon_2015.jpg" href="images/seattle_marathon_2015.jpg"></image-thumbnail>
   </template>
 
   <script>
