--- a/src/my-view404.html
+++ b/src/my-view404.html
@@ -10,7 +10,7 @@
       }
     </style>
 
-    Page not found. <a href="[[rootPath]]">Head back to home.</a>
+    Page not found. <a href="[[rootPath]]#/home">Head back to home.</a>
   </template>
 
   <script>
