--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       If deploying to a non-root path, replace href="/" with the full path to the project root.
       For example: href="/polymer-starter-kit/relative-path-example/"
     -->
-    <base href="/~jstn">
+    <base href="/~jstn/">
 
     <link rel="icon" href="images/favicon.ico">
 
