--- a/src/my-teaching.html
+++ b/src/my-teaching.html
@@ -27,6 +27,7 @@
         I was a TA for the robotics capstone class in Autumn 2014, as well.
         <ul>
           <li><a href="https://sites.google.com/site/cse481au14/teams">Final project videos</a></li>
+          <li><a href="https://github.com/jstnhuang/cse481c_tutorials">Class tutorials</a></li>
         </ul>
       </p>
     </div>
