Added link to IROS publication.

--- a/src/my-publications.html
+++ b/src/my-publications.html
@@ -22,7 +22,7 @@
     <div class="card">
       <h1>Publications</h1>
       <p>
-        <strong class="title primaryText">Flexible User Specification of Perceptual Landmarks for Robot Manipulation</strong><br />
+        <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sb2V3aUhsQ2dDSm8/view?usp=sharing">Flexible User Specification of Perceptual Landmarks for Robot Manipulation</a><br />
         <span class="publisher">Intelligent Robots and Systems (IROS). IEEE, 2017</span><br />
         <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
       </p>
