Added ROSCon presentation to publications.

--- a/src/my-publications.html
+++ b/src/my-publications.html
@@ -63,13 +63,17 @@
       </p>
     </div>
     <div class="card">
-      <h1>Workshop papers and pre-prints</h1>
+      <h1>Workshop papers, pre-prints, and technical presentations</h1>
+      <p>
+        <a class="title" href="https://drive.google.com/open?id=0B77PnOCaAq8sVlBtNnV0QlV5cXM">Reactive web interfaces with Polymer and ROS</a><br />
+        <span class="publisher">ROSCon presentation. ROSCon, 2017</span><br />
+        <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
+      </p>
       <p>
         <a class="title" href="https://arxiv.org/abs/1612.00565">Programming by Demonstration with User-Specified Perceptual Landmarks</a><br />
         <span class="publisher">arXiv preprint. arXiv:1612.00565, 2016</span><br />
         <span class="authors"><strong>Huang, Justin</strong> and Maya Cakmak</span><br />
       </p>
-
       <p>
         <a class="title" href="https://drive.google.com/file/d/0B77PnOCaAq8sejBFZXJsMldpOEE/view?usp=sharing">Enabling rapid end-to-end programming of mobile manipulators</a><br />
         <span class="publisher">ACM/IEEE International Conference on Human-Robot Interaction (HRI) Extended Abstracts. ACM, 2017.</span><br />
