Added software section.

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -15,6 +15,7 @@
 <link rel="lazy-import" href="my-home.html">
 <link rel="lazy-import" href="my-projects.html">
 <link rel="lazy-import" href="my-publications.html">
+<link rel="lazy-import" href="my-software.html">
 <link rel="lazy-import" href="my-teaching.html">
 <link rel="lazy-import" href="my-personal.html">
 <link rel="lazy-import" href="my-view404.html">
@@ -99,6 +100,7 @@
             <a name="home" href="#/home">Home</a>
             <a name="projects" href="#/projects">Projects</a>
             <a name="publications" href="#/publications">Publications</a>
+            <a name="software" href="#/software">Software</a>
             <a name="teaching" href="#/teaching">Teaching</a>
             <a name="personal" href="#/personal">Personal</a>
           </iron-selector>
@@ -113,6 +115,7 @@
           <my-home name="home"></my-home>
           <my-projects name="projects"></my-projects>
           <my-publications name="publications"></my-publications>
+          <my-software name="software"></my-software>
           <my-teaching name="teaching"></my-teaching>
           <my-personal name="personal"></my-personal>
           <my-view404 name="view404"></my-view404>
